--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ https://www.tooplate.com/view/2115-marvel
                                   <span>02/2025</span>
                              </div>
                              <div class="timeline-info">
-                                  <h3><span>Project Manager</span></h3>
+                                  <h3><span>Python Full Stack Developer Intern</span></h3>
                                   <p class="pt-3">Feather Softwares</p>
                                   <p><i class="fa-solid fa-location-dot pr-2" style="color: #ababab;"></i>Nagercoil</p>
                                   <p>Worked on full-stack web development, focusing on Python, Django, and React.js to build dynamic and 
